<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_to_android_kick_off_with_amit_swain"
        android:textSize="15sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#ff5722"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center"
        android:text="@string/welcome_to_tony_stark_portal"
        android:textSize="15sp"
        android:padding="10dp"
        android:textStyle="italic"
        android:textColor="#2196f3"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/tony_stark"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/enter_your_name_here"
        android:layout_margin="20dp"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/enter_your_password_here"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:background="#F63D03"
        android:textColor="#212121"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        android:background="#ff3d00"
        android:textColor="#212121"
        android:textStyle="bold"
        android:textSize="20sp"
        />





</LinearLayout>